# darve-stream

./: .env  Cargo.toml  README.md
src/: config.rs  main.rs
src/interfaces/: user_session.rs
src/models/: auth.rs
src/routes/: auth.rs  chat.rs  dashboard.rs  donate.rs  mod.rs  root.rs  stream.rs
src/services/: user_session.rs
src/views/: chat.rs  dashboard.rs  donate.rs  login.rs  mod.rs  stream.rs
templates/: base.html  chat_page.html  dashboard_page.html  donate_page.html  login_page.html  stream_page.html
templates/components/: sidebar.html
