[package]
name = "darve-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.4"
async-trait = "0.1.89"
axum = "0.8.8"
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-sessions = "0.15.0"

[profile.release]
opt-level = 3
